--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -2,16 +2,16 @@ $theme-colors: (
   "primary": #227447
 );
 
-
-
 @import "~bootstrap/scss/bootstrap";
 
 .caption {
   border-radius: 50px;
-  width: 100vw;
+  width: 80vw;
   background-color: rgba(map-get($theme-colors, "dark" ), 0.7);
   font-size: 1.5rem;
   padding: 15px;
+  position: absolute;
+  bottom: 90px;
 }
 
 hr {
@@ -30,6 +30,24 @@ hr.right{
   margin-right: 100%;
 }
 
+#overlay {
+  position: absolute; /* Sit on top of the page content */
+  width: 100%; /* Full width (cover the whole page) */
+  height: 100%; /* Full height (cover the whole page) */
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-image: linear-gradient(transparent, rgba(map-get($theme-colors, "dark" ), 0.4));
+  z-index: 10; /* Specify a stack order in case you're using a different order for other elements */
+  pointer-events:none;
+}
+
+.saiba-mais{
+  display: none;
+}
+
+
 @media (min-width: 992px) {
   .saiba-mais {
     display: flex;
@@ -45,16 +63,44 @@ hr.right{
     color: map-get($theme-colors, "light");
     height: 20px;
     z-index: 10;
+
 }
 
-.saiba-mais:after {
+.saiba-mais-icon {
   content: "";
   position: absolute;
   bottom: 0;
-  background-image: url(https://github.com/ZehCoque/excel-classes/blob/master/public/icons/double_arrow_white_48dp.svg);
-  height: 20px;
-  width: 20px;
+  height: 40px;
+  width: 40px;
   top: 20px;
   cursor: pointer;
 }
+
+.vw-100-md{
+  width: 100vh !important;
 }
+
+.vh-100-md{
+  height: 100vh !important;
+
+}
+
+}
+
+@media (max-width: 575px) {
+
+  .caption p{
+    display: none;
+  }
+
+  .caption h1{
+    font-size: large !important;
+  }
+
+  .caption{
+  bottom: 1rem;
+
+  }
+}
+
+
